feat: 바텀 네비게이션 아이콘 그림자 추가
- 바텀 네비게이션 아이콘 그림자 추가
- ic_nav_종류_상태.xml을 png로 변경
- 기존 xml은 ic_종류.xml로 저장

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,8 +42,11 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation_view"
             android:layout_width="match_parent"
-            android:layout_height="72dp"
+            android:layout_height="90dp"
             android:background="@color/white"
+            android:layout_marginBottom="-17dp"
+            android:paddingTop="-5dp"
+            app:itemIconSize="40dp"
             app:menu="@menu/bottom_nav_menu"
             app:labelVisibilityMode="unlabeled"
             app:itemBackground="@android:color/transparent"
