--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -28,7 +28,7 @@
         android:layout_height="48dp"
         android:background="@null"
         android:contentDescription="검색"
-        android:src="@drawable/ic_nav_search_unselected"
+        android:src="@drawable/ic_search"
         android:layout_marginTop="90dp"
         android:layout_marginEnd="56dp"
         app:layout_constraintTop_toTopOf="parent"
