--- a/app/src/main/res/layout/fragment_question_search.xml
+++ b/app/src/main/res/layout/fragment_question_search.xml
@@ -38,7 +38,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginEnd="15dp"
-            android:src="@drawable/ic_nav_search_unselected"
+            android:src="@drawable/ic_search"
             app:tint="@color/gray3" />
     </LinearLayout>
 
