feat: 질문 화면 비율 수정 및 디테일 추가
- 좋아요 로직 수정
- 미리보기 최대 글자 수 구현 (32자)
- 익명/실명 기능 추가

--- a/app/src/main/res/layout/item_question_feed.xml
+++ b/app/src/main/res/layout/item_question_feed.xml
@@ -96,7 +96,7 @@
                 android:layout_marginStart="10dp"
                 android:text="100"
                 android:textAppearance="@style/TextAppearance.App.LabelTiny"
-                android:textColor="@color/gray2" />
+                android:textColor="@color/point_pink" />
         </LinearLayout>
 
         <!-- 댓글 영역 -->
