--- a/app/src/main/res/layout/item_question_comment.xml
+++ b/app/src/main/res/layout/item_question_comment.xml
@@ -9,29 +9,29 @@
     android:paddingHorizontal="15dp"
     android:paddingVertical="8dp">
 
-    <!-- A 아이콘 -->
+    <!-- 아이콘 -->
     <ImageView
-        android:id="@+id/ivDetailQ"
+        android:id="@+id/ivProfile"
         android:layout_width="16dp"
         android:layout_height="16dp"
+        android:layout_marginTop="3dp"
         android:src="@drawable/ic_a_mark"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tvName"
-        app:layout_constraintBottom_toBottomOf="@id/tvName" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- 이름 -->
     <TextView
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="사용자 이름"
-        android:textColor="@color/black"
+        android:text="익명의 해결사"
+        android:textColor="@color/point_green"
         android:layout_marginStart="5dp"
         android:layout_marginVertical="5dp"
         android:textAppearance="@style/TextAppearance.App.TitleMedium"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/ivDetailQ"
-        app:layout_constraintBottom_toBottomOf="@id/ivDetailQ"/>
+        app:layout_constraintStart_toEndOf="@id/ivProfile"
+        app:layout_constraintBottom_toBottomOf="@id/ivProfile"/>
 
     <!-- 내용 -->
     <TextView
