--- a/app/src/main/res/layout/item_question_detail.xml
+++ b/app/src/main/res/layout/item_question_detail.xml
@@ -10,17 +10,36 @@
     android:paddingEnd="20dp"
     android:paddingVertical="10dp">
 
-    <!-- 익명 질문 -->
-    <TextView
-        android:id="@+id/tvAnonymous"
+    <!-- 익명 or 사용자 이름 표시 영역 -->
+    <LinearLayout
+        android:id="@+id/llUsernameRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="익명 질문"
-        android:textAppearance="@style/TextAppearance.App.LabelTiny"
-        android:textColor="@color/point_purple"
-        android:layout_marginBottom="5dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <!-- 사용자 프로필 ( -->
+        <ImageView
+            android:id="@+id/ivProfile"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:src="@drawable/ic_profile"
+            android:layout_marginEnd="3dp"
+            android:layout_marginTop="1dp"
+            android:visibility="gone" />
+
+        <!-- 이름 or '익명 질문' -->
+        <TextView
+            android:id="@+id/tvUsername"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="익명 질문"
+            android:textAppearance="@style/TextAppearance.App.LabelTiny"
+            android:textColor="@color/point_green" />
+    </LinearLayout>
+
 
     <!-- Q 아이콘 -->
     <ImageView
@@ -44,7 +63,7 @@
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@id/ivDetailQ"
         app:layout_constraintStart_toEndOf="@id/ivDetailQ"
-        app:layout_constraintTop_toBottomOf="@+id/tvAnonymous" />
+        app:layout_constraintTop_toBottomOf="@+id/llUsernameRow" />
 
     <!-- 질문 내용 + 해시태그 -->
     <TextView
