--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/topBarContainer"
-    android:paddingTop="100dp"
+    android:paddingTop="122dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,7 +12,7 @@
         android:id="@+id/questionBar"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginHorizontal="12dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:background="@drawable/bg_question_input"
@@ -31,9 +31,9 @@
             android:paddingStart="15dp" />
 
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="15dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="13dp"
             android:src="@drawable/ic_search"
             app:tint="@color/gray3" />
     </LinearLayout>
@@ -50,7 +50,8 @@
         app:layout_constraintBottom_toTopOf="@id/nestedScrollView"
         android:layout_marginTop="17dp"
         android:layout_marginBottom="2dp"
-        android:layout_marginEnd="7dp">
+        android:layout_marginEnd="7dp"
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/ivSortIcon"
@@ -73,8 +74,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="5dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSortEdit">
 
