--- a/app/src/main/res/layout/fragment_question_search.xml
+++ b/app/src/main/res/layout/fragment_question_search.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/questionSearchLayout"
+    android:layout_marginTop="38dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,8 +12,8 @@
         android:id="@+id/questionBar"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginVertical="10dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:background="@drawable/bg_question_input"
@@ -35,9 +36,9 @@
             style="@style/TextAppearance.App.BodySmall" />
 
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="15dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="13dp"
             android:src="@drawable/ic_search"
             app:tint="@color/gray3" />
     </LinearLayout>
@@ -50,7 +51,7 @@
         android:text="취소"
         style="@style/TextAppearance.App.BodyMedium"
         android:textColor="@color/gray2"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="12dp"
         app:layout_constraintTop_toTopOf="@id/questionBar"
         app:layout_constraintBottom_toBottomOf="@id/questionBar"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -60,7 +61,7 @@
         android:id="@+id/flexHashtags"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="10dp"
+        android:paddingHorizontal="12dp"
         app:layout_constraintTop_toBottomOf="@id/questionBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,7 +74,8 @@
         android:id="@+id/rvSearchResults"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:padding="5dp"
+        android:layout_marginTop="6dp"
+        android:padding="6dp"
         android:overScrollMode="never"
         app:layout_constraintTop_toBottomOf="@id/flexHashtags"
         app:layout_constraintBottom_toBottomOf="parent"
