--- a/app/src/main/res/layout/item_question_feed.xml
+++ b/app/src/main/res/layout/item_question_feed.xml
@@ -48,11 +48,12 @@
         android:textAppearance="@style/TextAppearance.App.LabelSmall"
         android:textColor="@color/black"
         android:minLines="2"
+        android:maxLines="2"
         app:layout_constraintTop_toBottomOf="@id/titleTimeRow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/ivThumbnail"
         android:layout_marginVertical="7dp"
-        android:layout_marginEnd="5dp"/>
+        android:layout_marginEnd="12dp"/>
 
     <!-- 우측 썸네일  -->
     <ImageView
