--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -38,7 +38,7 @@
             app:tint="@color/gray3" />
     </LinearLayout>
 
-    <!-- 정렬 편지 -->
+    <!-- 정렬 편집 -->
     <LinearLayout
         android:id="@+id/btnSortEdit"
         android:layout_width="wrap_content"
@@ -48,10 +48,8 @@
         app:layout_constraintTop_toBottomOf="@id/questionBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/nestedScrollView"
-        android:layout_marginTop="17dp"
-        android:layout_marginBottom="2dp"
-        android:layout_marginEnd="7dp"
-        android:visibility="gone">
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="16dp">
 
         <ImageView
             android:id="@+id/ivSortIcon"
@@ -74,7 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:layout_marginHorizontal="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSortEdit">
