--- a/app/src/main/res/layout/item_question_feed.xml
+++ b/app/src/main/res/layout/item_question_feed.xml
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toBottomOf="@id/titleTimeRow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/ivThumbnail"
-        android:layout_marginVertical="7dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="12dp"/>
 
     <!-- 우측 썸네일  -->
@@ -71,6 +71,7 @@
         android:id="@+id/feedbackRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -86,8 +87,8 @@
 
             <ImageView
                 android:id="@+id/ivLike"
-                android:layout_width="16dp"
-                android:layout_height="13dp"
+                android:layout_width="19dp"
+                android:layout_height="wrap_content"
                 android:src="@drawable/ic_question_like_unselected" />
 
             <TextView
