feat: 폰트 수정 및 버그 수정
- 일부 숫자에 세미볼드 폰트 적용
- 커뮤니티 항목 잘리는 버그 해결
- 인터렉션 비율 수정

--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -157,7 +157,8 @@
                 android:layout_height="wrap_content"
                 android:text="2025/00/00 00:00"
                 android:textColor="@color/gray3"
-                style="@style/TextAppearance.App.LabelMedium"
+                android:textAppearance="@style/TextAppearance.App.LabelMedium"
+                android:fontFamily="@font/roboto_medium"
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="70dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -196,7 +197,7 @@
                         android:layout_marginStart="9dp"
                         android:text="000"
                         style="@style/TextAppearance.App.LabelSmall"
-                        android:textStyle="bold"
+                        android:fontFamily="@font/roboto_semibold"
                         android:textColor="@color/gray2"/>
                 </LinearLayout>
 
@@ -221,7 +222,7 @@
                         android:layout_marginStart="9dp"
                         android:text="000"
                         style="@style/TextAppearance.App.LabelSmall"
-                        android:textStyle="bold"
+                        android:fontFamily="@font/roboto_semibold"
                         android:textColor="@color/gray2" />
                 </LinearLayout>
 
@@ -246,7 +247,7 @@
                         android:layout_marginStart="9dp"
                         android:text="000"
                         style="@style/TextAppearance.App.LabelSmall"
-                        android:textStyle="bold"
+                        android:fontFamily="@font/roboto_semibold"
                         android:textColor="@color/gray2" />
                 </LinearLayout>
 
@@ -271,7 +272,7 @@
                         android:layout_marginStart="9dp"
                         android:text="000"
                         style="@style/TextAppearance.App.LabelSmall"
-                        android:textStyle="bold"
+                        android:fontFamily="@font/roboto_semibold"
                         android:textColor="@color/gray2" />
                 </LinearLayout>
             </LinearLayout>
