--- a/app/src/main/res/drawable/btn_follow_selector.xml
+++ b/app/src/main/res/drawable/btn_follow_selector.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="true" android:drawable="@drawable/bg_bottomsheet_following" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-    <item android:drawable="@drawable/bg_bottomsheet_follow" />
-</selector>
+    <solid android:color="@color/gray2" />
+
+    <corners android:radius="15dp" />
+</shape>
