--- a/app/src/main/res/layout/bottomsheet_feed_feedback.xml
+++ b/app/src/main/res/layout/bottomsheet_feed_feedback.xml
@@ -33,7 +33,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vp_feedback"
