--- a/app/src/main/res/layout/dialog_image_view.xml
+++ b/app/src/main/res/layout/dialog_image_view.xml
@@ -60,7 +60,7 @@
                 android:layout_marginStart="9dp"
                 android:text="000"
                 style="@style/TextAppearance.App.LabelSmall"
-                android:textStyle="bold"
+                android:fontFamily="@font/roboto_semibold"
                 android:textColor="@android:color/white"/>
         </LinearLayout>
 
@@ -86,7 +86,7 @@
                 android:layout_marginStart="9dp"
                 android:text="000"
                 style="@style/TextAppearance.App.LabelSmall"
-                android:textStyle="bold"
+                android:fontFamily="@font/roboto_semibold"
                 android:textColor="@android:color/white" />
         </LinearLayout>
 
@@ -112,7 +112,7 @@
                 android:layout_marginStart="9dp"
                 android:text="000"
                 style="@style/TextAppearance.App.LabelSmall"
-                android:textStyle="bold"
+                android:fontFamily="@font/roboto_semibold"
                 android:textColor="@android:color/white" />
         </LinearLayout>
 
@@ -138,7 +138,7 @@
                 android:layout_marginStart="9dp"
                 android:text="000"
                 style="@style/TextAppearance.App.LabelSmall"
-                android:textStyle="bold"
+                android:fontFamily="@font/roboto_semibold"
                 android:textColor="@android:color/white" />
         </LinearLayout>
     </LinearLayout>
