--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -104,6 +104,7 @@
         android:text="2025/00/00 00:00"
         android:textColor="@color/gray3"
         style="@style/TextAppearance.App.LabelMedium"
+        android:fontFamily="@font/roboto_medium"
         android:layout_marginTop="10dp"
         android:layout_marginStart="48dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -145,7 +146,7 @@
                 android:layout_marginStart="6dp"
                 android:text="000"
                 style="@style/TextAppearance.App.LabelSmall"
-                android:textStyle="bold"
+                android:fontFamily="@font/roboto_semibold"
                 android:textColor="@color/gray2"/>
         </LinearLayout>
 
@@ -170,7 +171,7 @@
                 android:layout_marginStart="6dp"
                 android:text="000"
                 style="@style/TextAppearance.App.LabelSmall"
-                android:textStyle="bold"
+                android:fontFamily="@font/roboto_semibold"
                 android:textColor="@color/gray2" />
         </LinearLayout>
 
@@ -195,7 +196,7 @@
                 android:layout_marginStart="6dp"
                 android:text="000"
                 style="@style/TextAppearance.App.LabelSmall"
-                android:textStyle="bold"
+                android:fontFamily="@font/roboto_semibold"
                 android:textColor="@color/gray2" />
         </LinearLayout>
 
@@ -220,7 +221,7 @@
                 android:layout_marginStart="6dp"
                 android:text="000"
                 style="@style/TextAppearance.App.LabelSmall"
-                android:textStyle="bold"
+                android:fontFamily="@font/roboto_semibold"
                 android:textColor="@color/gray2" />
         </LinearLayout>
     </LinearLayout>
