--- a/app/src/main/res/layout/item_feed_detail.xml
+++ b/app/src/main/res/layout/item_feed_detail.xml
@@ -57,6 +57,7 @@
             android:text="\@user1"
             android:textColor="@color/gray2"
             style="@style/TextAppearance.App.LabelSmall"
+            android:fontFamily="@font/roboto_medium"
             app:layout_constraintStart_toEndOf="@id/iv_profile"
             app:layout_constraintTop_toBottomOf="@id/tv_username" />
 
@@ -129,6 +130,7 @@
             android:text="2025/00/00 00:00"
             android:textColor="@color/gray3"
             style="@style/TextAppearance.App.LabelMedium"
+            android:fontFamily="@font/roboto_medium"
             android:layout_marginTop="7dp"
             android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -168,7 +170,7 @@
                     android:layout_marginStart="9dp"
                     android:text="000"
                     style="@style/TextAppearance.App.BodySmall"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/roboto_semibold"
                     android:textColor="@color/gray2"/>
             </LinearLayout>
 
@@ -193,7 +195,7 @@
                     android:layout_marginStart="9dp"
                     android:text="000"
                     style="@style/TextAppearance.App.BodySmall"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/roboto_semibold"
                     android:textColor="@color/gray2" />
             </LinearLayout>
 
@@ -218,7 +220,7 @@
                     android:layout_marginStart="9dp"
                     android:text="000"
                     style="@style/TextAppearance.App.BodySmall"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/roboto_semibold"
                     android:textColor="@color/gray2" />
             </LinearLayout>
 
@@ -243,7 +245,7 @@
                     android:layout_marginStart="9dp"
                     android:text="000"
                     style="@style/TextAppearance.App.BodySmall"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/roboto_semibold"
                     android:textColor="@color/gray2" />
             </LinearLayout>
         </LinearLayout>
