--- a/app/src/main/res/layout/item_question_detail.xml
+++ b/app/src/main/res/layout/item_question_detail.xml
@@ -114,6 +114,7 @@
     <TextView
         android:id="@+id/tvDetailTime"
         style="@style/TextAppearance.App.LabelSmall"
+        android:fontFamily="@font/roboto_medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="2025/00/00 00:00"
