--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,16 +2,18 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingTop="24dp"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/layout_profile_intro"
         android:layout_width="match_parent"
-        android:layout_height="212dp"
+        android:layout_height="189dp"
         android:orientation="vertical"
-        android:paddingTop="23dp"
-        android:background="@drawable/bg_profile_no_bg">
+
+        android:background="@drawable/bg_profile_ex">
 
         <LinearLayout
             android:id="@+id/ll_profile_wrapper"
@@ -111,7 +113,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:layout_marginTop="212dp" />
+        android:layout_marginTop="189dp" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
@@ -119,7 +121,7 @@
         android:layout_height="34dp"
         android:background="@drawable/bg_profile_tab"
         android:elevation="4dp"
-        android:layout_marginTop="212dp"
+        android:layout_marginTop="189dp"
         app:tabIndicatorColor="@color/point_purple"
         style="@style/TextAppearance.App.LabelLarge"
         app:tabSelectedTextColor="@color/black"
