feat: 알림창 화면 수정
- 디바이스 비율에 맞게 알림창이 뜰 수 있게 로직 수정

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,12 @@
 
     <!-- 상단 바 (위에 겹쳐서 보이게) -->
     <include
+        android:id="@+id/top_bar"
         layout="@layout/top_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@+id/fragment_container_view"
+        app:layout_constraintBottom_toBottomOf="@+id/fragment_container_view"/>
 
     <!-- 하단 영역 묶음 (경계선 + 바텀 네비) -->
     <LinearLayout
