navigationdrawer 관련 변경

--- a/app/src/main/res/layout/item_chat_left.xml
+++ b/app/src/main/res/layout/item_chat_left.xml
@@ -21,5 +21,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_chat_left"
+        android:layout_marginStart="13dp"
         android:textColor="@android:color/black"/>
 </LinearLayout>
