--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,57 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:fitsSystemWindows="false">
 
-    <!-- 프래그먼트 컨테이너 (전체를 차지) -->
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_container_view"
-        android:name="androidx.fragment.app.Fragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_bar_container"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <!-- 상단 바 (위에 겹쳐서 보이게) -->
-    <include
-        layout="@layout/top_bar"
+    <!-- 메인 콘텐츠 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent">
 
-    <!-- 하단 영역 묶음 (경계선 + 바텀 네비) -->
-    <LinearLayout
-        android:id="@+id/bottom_bar_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent">
+        <!-- 프래그먼트 컨테이너 (전체 차지) -->
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragment_container_view"
+            android:name="androidx.fragment.app.Fragment"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/bottom_bar_container"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-        <!-- 경계선 -->
-        <View
+        <!-- 하단 영역 묶음 (구분선 + 바텀 네비) -->
+        <LinearLayout
+            android:id="@+id/bottom_bar_container"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/gray3" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-        <!-- 바텀 네비게이션 -->
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation_view"
+            <!-- 구분선 -->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray3" />
+
+            <!-- 바텀 네비 -->
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottom_navigation_view"
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:layout_marginBottom="-17dp"
+                android:paddingTop="-5dp"
+                android:background="@color/white"
+                app:itemIconSize="40dp"
+                app:menu="@menu/bottom_nav_menu"
+                app:labelVisibilityMode="unlabeled"
+                app:itemBackground="@android:color/transparent"
+                app:itemRippleColor="@android:color/transparent"
+                app:itemActiveIndicatorStyle="@android:color/transparent" />
+        </LinearLayout>
+
+        <!-- 상단 바 (가장 위에 겹쳐서 표시됨) -->
+        <include
+            layout="@layout/top_bar"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:background="@color/white"
-            android:layout_marginBottom="-17dp"
-            android:paddingTop="-5dp"
-            app:itemIconSize="40dp"
-            app:menu="@menu/bottom_nav_menu"
-            app:labelVisibilityMode="unlabeled"
-            app:itemBackground="@android:color/transparent"
-            app:itemRippleColor="@android:color/transparent"
-            app:itemActiveIndicatorStyle="@android:color/transparent" />
-    </LinearLayout>
+            android:layout_height="wrap_content" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- 햄버거 메뉴 -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/drawer_menu"
+        app:itemIconTint="@null"
+        android:background="@android:color/white"
+        app:itemTextColor="@color/nav_item_text_color" />
+</androidx.drawerlayout.widget.DrawerLayout>
