--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@android:color/white">  <!-- 배경을 흰색으로 설정 -->
+    android:background="@android:color/white">
+    <!-- 배경을 흰색으로 설정 -->
 
     <!-- 상단 채팅 수 표시 -->
     <TextView
@@ -17,7 +18,7 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
