--- a/app/src/main/res/layout/item_section_edit.xml
+++ b/app/src/main/res/layout/item_section_edit.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@android:color/white"
     android:padding="12dp">
 
     <!-- 제목 입력란 -->
