feat: 피드 관련 API 연동
- 커뮤니티 항목 확장 제거 및 비율 수정
- 프로필 탭(피드) API 연동

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,7 +29,7 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="15dp"/>
+                android:layout_marginBottom="20dp"/>
 
             <!-- 커뮤니티 더보기 버튼 -->
             <ImageView
@@ -42,7 +42,8 @@
                 android:layout_marginEnd="17dp"
                 android:background="@null"
                 android:clickable="true"
-                android:focusable="true" />
+                android:focusable="true"
+                android:visibility="gone"/>
 
             <!-- 커뮤니티 리스트 -->
             <androidx.recyclerview.widget.RecyclerView
